[package]
name = "rust-todo22"
version = "0.1.0"
authors = ["thealchemist17 <lucamancinelli17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
time = "0.1.42"
tempfile = "3.1.0"
serde_json = "1.0.40"
serde = "1.0.98"
[dev-dependencies]
assert_cmd = "0.11.1"
